wrap new-link-btn with li tag

--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -138,10 +138,13 @@ a {
                 padding:14px 16px 14px 16px;
             }
             .nav {
-                a.btn {
+                li a.btn {
                     border: none;
                     background: #e33244;
                     margin: 16px 0 0 15px;
+                    padding:4px 6px;
+                    color: white;
+
                 }
             }
         }
