--- a/misc/templates/misc/email_templates/default.html
+++ b/misc/templates/misc/email_templates/default.html
@@ -40,6 +40,9 @@
                         <table style="width:600px;">
                               <tbody><tr>
                                     <td style="color:#333; font-size:12px;"><b>© 莲蓬</b> 
+                                        {% if unsubscribe_link %}
+                                        <a href="{{ unsubscribe_link }}">取消订阅</a>
+                                        {% endif %}
                                     </td>
                                     <td style="color:#333; font-size:12px; text-align:right;" width="130px">
                                       <table style="width:100%;">
