--- a/lianpeng/templates/site_base.html
+++ b/lianpeng/templates/site_base.html
@@ -8,6 +8,7 @@
     <link href="{% static "pinax/css/theme.css" %}" rel="stylesheet">
     <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
     <link href="{% static "css/welcome.css" %}" rel="stylesheet">
+    <link href="{% static "js/select2/select2.css" %}" rel="stylesheet">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/bbtn.css" type="text/css" media="screen" charset="utf-8">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
     <!--[if IE 6]>
@@ -113,6 +114,8 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/noty/jquery.noty.js" charset="utf-8"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/noty/layouts/top.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/noty/themes/default.js?v=2" charset="utf-8"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/select2/select2.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/select2/select2_locale_zh-CN.js" charset="utf-8"></script>
     <script src="{% static "js/eldarion-ajax.min.js" %}"></script>
     {% block extra_script %}{% endblock %}
 {% endblock %}
