--- a/misc/templates/misc/email_templates/default.html
+++ b/misc/templates/misc/email_templates/default.html
@@ -39,7 +39,7 @@
                         <br>
                         <table style="width:600px;">
                               <tbody><tr>
-                                    <td style="color:#333; font-size:12px;"><b>© 莲蓬</b> 
+                                      <td style="color:#333; font-size:12px;"><b>© <a href="http://lianpeng.me" target="_blank">莲蓬</a></b>
                                         {% if unsubscribe_link %}
                                         <a href="{{ unsubscribe_link }}">取消订阅</a>
                                         {% endif %}
