note detail page

--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -67,7 +67,7 @@ a {
         color:@green;
         text-decoration:none;
     }
-    color: @black;
+    color: #333;
 }
 .btn {
     .box-shadow(0 0 0 rgba(0,0,0,0));
@@ -703,6 +703,9 @@ hr.soften {
     background-image: -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
     background-image: -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
     border: 0;
+}
+hr.small {
+    margin:5px 0;
 }
 
 /* avatar */
