--- a/lianpeng/templates/_footer.html
+++ b/lianpeng/templates/_footer.html
@@ -5,6 +5,8 @@
     </div>
     <div class="span3 pull-right">
         <div class="pull-right">
+        <a href="/help/">帮助</a>
+        ·
         <a href="/about/">关于</a>
         · <a href="http://blog.lianpeng.me/" target="_blank">博客</a>
         </div>
