domain page title

--- a/bookmark/templates/bookmark/list_domain.html
+++ b/bookmark/templates/bookmark/list_domain.html
@@ -4,7 +4,7 @@
 {% load bookmark_tags %}
 {% load compressed %}
 
-{% block head_title %}{{ list.name }}{% endblock %}
+{% block head_title %}{{ domain }}{% endblock %}
 {% block body %}
     <div class="row bookmarks list-domain">
         <div class="span3" id="lists">
