--- a/note/templates/note/detail.html
+++ b/note/templates/note/detail.html
@@ -37,12 +37,17 @@
         </div>
     </div>
     <div class="span3">
+        {% if bookmark.user == user %}
+        <div class="well-small well">
+            <a href="{% url note_edit bookmark.id %}" class="btn btn-success">编辑</a>
+        </div>
+        {% endif %}
         <h4><a href="{% url bookmark_list bookmark.list.id %}">{{ bookmark.list.name }}</a></h4>
         <hr class="small">
         <ul class="unstyled posts">
             {% for b in  bookmark.list.top_ten %}
             <li><a href="{% url note_detail b.id %}">{{ b.title }}</a> / 
-                <small class="muted">{{ bookmark.note|slice:"30" }}</small>
+                <small class="muted">{{ b.note|slice:"30" }}</small>
             </li>
             {% endfor %}
         </ul>
