--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -37,7 +37,7 @@
             <div class="row-fluid">
                 <div class="span6">
                     <div class="iconbox">
-                        <a class="muted" href="{% url bookmark_explore %}">
+                        <a target="_blank" class="muted" href="{% url bookmark_explore %}">
                             <i class="icon-bolt text-info"></i>
                             <div>探索发现</div>
                         </a>
