--- a/note/templates/note/edit.html
+++ b/note/templates/note/edit.html
@@ -8,26 +8,36 @@
 {% block style_base %}
     <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
     <link rel="stylesheet" href="{{ STATIC_URL }}js/pen/pen.css" type="text/css" media="screen" charset="utf-8"0>
+    <style type="text/css" media="screen">
+    #editor {
+        min-height:300px;
+        padding:10px;
+    }
+    </style>    
 {% endblock %}
 {% block body %}
 <div class="row-fluid">
     <div class="span12 well">
         <div class="btn-group">
-        <a href="javascript:;" class="save btn btn-success btn-large">保存</a>
-        <a href="{% url note_detail bookmark.id %}" class="btn btn-success btn-large">查看</a>
+            <a href="javascript:;" class="save btn btn-success btn-large">保存</a>
+            <a target="_blank" href="{% url note_detail bookmark.id %}" class="btn btn-success btn-large">查看</a>
         </div>
     </div>
 </div>
-<div id="title" class="page-title">
-    <h1>{% if bookmark.title %}{{ bookmark.title|safe }}{% else %}标题{% endif %}</h1>
-</div>
-<hr class="soften">
-<div id="editor">
-    {% if bookmark.note %}
-    {{ bookmark.note|safe }}
-    {% else %}
-    这里填写笔记
-    {% endif %}
+<div class="row-fluid">
+    <div class="span10 offset1">
+        <div id="title" class="page-title">
+            <h1>{% if bookmark.title %}{{ bookmark.title|safe }}{% else %}标题{% endif %}</h1>
+        </div>
+        <hr class="soften">
+        <div id="editor">
+            {% if bookmark.note %}
+            {{ bookmark.note|safe }}
+            {% else %}
+            这里填写笔记
+            {% endif %}
+        </div>
+    </div>
 </div>
 {% endblock %}
 
