--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -480,7 +480,7 @@
                                     </div>
                                     <%if(bookmark.note) {%>
                                     <div class="row-fluid">
-                                        <blockquote class="muted"><%-bookmark.note%></blockquote>
+                                        <blockquote class="muted"><%-bookmark.note_text%></blockquote>
                                     </div>
                                     <%}%>
                                         <div class="row-fluid comments-box hide">
