--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="span6">
                     <div class="iconbox">
-                        <a class="muted" href="{% url bookmark_tools %}">
+                        <a class="muted" href="{% url bookmark_tools %}" target="_blank">
                             <i class="icon-wrench text-success"></i>
                             <div>收藏工具</div>
                         </a>
