--- a/lianpeng/templates/homepage.html
+++ b/lianpeng/templates/homepage.html
@@ -32,7 +32,7 @@
 <div class="container features">
         <div class="row-fluid">
             <div class="span12 ">
-                <h1 class="center"><small>莲蓬网已存储</small> <big><b id="count" class="text-center"></b></big> <small>个网页链接</small></h1>
+                <h1 class="center"><small>莲蓬网已为用户存储</small> <big><b id="count" class="text-center"></b></big> <small>个网页链接</small></h1>
                 <hr class="">
             </div>
         </div>
