--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -35,7 +35,7 @@
         </a>
         <div class="dropdown-menu menu-box">
             <div class="row-fluid">
-                <div class="span6">
+                <div class="span4">
                     <div class="iconbox">
                         <a target="_blank" class="muted" href="{% url bookmark_explore %}">
                             <i class="icon-bolt text-info"></i>
@@ -43,11 +43,19 @@
                         </a>
                     </div>
                 </div>
-                <div class="span6">
+                <div class="span4">
                     <div class="iconbox">
                         <a class="muted" href="{% url bookmark_tools %}" target="_blank">
                             <i class="icon-wrench text-success"></i>
                             <div>收藏工具</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="span4">
+                    <div class="iconbox">
+                        <a class="muted new-note" href="{% url note_index %}" target="_blank">
+                            <i class="icon-book text-error"></i>
+                            <div>新建笔记</div>
                         </a>
                     </div>
                 </div>
@@ -76,91 +84,6 @@
 {% endblock %}
 {% block body %}
      <div class="row-fluid" id="user-home">
-        <div class="sidebar-widt hide">
-            <div class="sidebar-nav-fixed">
-                <div class="row-fluid brand-wrapper">
-                    <div class="span6">
-                        <a class="brand" href="/">{{ SITE_NAME }}</a>
-                    </div>
-                    <div class="span6">
-                        <ul class="unstyled brand-menu pull-right">
-                            <li class=""><a href="{% url account_logout %}"><i class="icon-off"></i> {% trans "Log out" %}</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <hr>
-                <div class="row-fluid">
-                    <div class="span4">
-                        <a href="{% url bookmark_profile user %}" title="{{ user }}">
-                            <img class="avatar" alt="{{ user }}" src="{% avatar user.email 64 %}&r=r" />
-                        </a>
-                    </div>
-                    <div class="span7 info pull-right">
-                        <ul class="unstyled">
-                            <li>
-                                <a href="{% url notifications:mark_all_as_read %}" class="pull-right">
-                                    {% notifications_unread as unread_count %}
-                                    <i class="icon-bell-alt"></i>
-                                    {% if unread_count %}<span class="badge badge-mini badge-warning">{{ unread_count }}</span>
-                                    {% else %}
-                                    {% trans "Notifications" %}
-                                    {% endif %}
-                                </a>
-                            </li>
-                            <li>
-                                <span class="pull-right"><b class="text-success"></b> <small class="">{% points_for_object user %} karma</small></span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="row-fluid username">
-                    <div class="span7">
-                            <a href="{% url bookmark_profile user %}" title="{{ user }}">
-                                <b>{{ user }}</b>
-                            </a>
-                    </div>
-                    <div class="span5 pull-right">
-                        <ul class="unstyled">
-                            <li>
-                                <a target="_blank" href="{% url account_settings %}" class="pull-right"><i class="icon-cog"></i> {% trans "Settings" %}</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <hr class="sidebar-hr">
-                <ul class="unstyled sidebar-menu">
-                    <li class="invite-menu">
-                        <a href="{% url invite_user %}">
-                            <i class="icon icon-heart"></i>
-                        {% trans "Invite" %} {% invites_remaining user %}</a></li>
-                    <li class="explore-menu">
-                        <a target="_blank" href="{% url bookmark_explore %}"><i class="icon icon-bolt"></i>
-                            {% trans "Explore" %}
-                        </a>
-                    </li>
-                    <li class="snapshot-menu">
-                        <a target="_blank" href="{% url market_app 'snapshot' %}"><i class="icon icon-camera"></i>
-                            {% trans "Snapshot" %} <span class="label label-success">NEW</span>
-                        </a>
-                    </li>
-                    <li class="tool-menu">
-                        <a target="_blank" href="{% url bookmark_tools %}"><i class="icon icon-wrench"></i>
-                            {% trans "Tools" %}
-                        </a>
-                    </li>
-                    <li class=""><a target="_blank" href="{% url bookmark_profile user.username %}"><i class="icon-home"></i> {% trans "My public page" %}</a></li>
-                    <li><a target="_blank" href="{% url bookmark_sync %}"><i class="icon-refresh"></i> {% trans "Sync" %}</a></li>
-                    <li class="import-menu"><a target="_blank" href="{% url bookmark_import %}"><i class="icon-signin"></i> {% trans "Import/Export" %}</a></li>
-                    <li class="divider"></li>
-                    {% if user.is_staff %}
-                    <li><a target="_blank" href="/adminx/"><i class="icon-wrench"></i> {% trans "Admin" %}</a></li>
-                    {% endif %}
-                    <li><a target="_blank" href="#feedback" data-toggle="modal"><i class="icon-comment"></i> {% trans "Feedback" %}</a></li>
-                    <li><a target="_blank" href="{% url help %}" data-toggle="modal"><i class="icon-question-sign"></i> {% trans "Help" %}</a></li>
-                </ul>
-                <hr>
-            </div>
-        </div>
         {% comment %}
         {% if user.is_superuser %}
         <div id="lianbang-container" style="z-index:10;position:fixed;left:0;bottom:0;width:15%;">
@@ -534,7 +457,10 @@
     </script>
     {% include 'bookmark/js/comment.html' %}
     <a href="" id="url-template"></a>
-    <div id="preview-box" class="hide ">
+    <div class="hide note-app">
+        <iframe></iframe>
+    </div>
+    <div id="preview-box" class="hide">
         <div class="action-bar navbar">
             <div class="navbar-inner">
                 <div class="container">
