--- a/lianpeng/static/less/bookmarklet.less
+++ b/lianpeng/static/less/bookmarklet.less
@@ -54,3 +54,11 @@ input[type="color"],
 body {
     background-color:transparent;
 }
+a.cover {
+    padding:2px;
+    display:block;
+    border:2px solid #ccc;
+    &.active {
+        border:1px solid @green;
+    }
+}
