specify dropdown-menu

--- a/lianpeng/static/css/bootstrap.css
+++ b/lianpeng/static/css/bootstrap.css
@@ -874,7 +874,7 @@ a{color:#333;}a:hover{color:#1dc499;text-decoration:none;}
 .bookmark-app .navbar.navbar-fixed-top .navbar-inner .navbar-form .input-append .btn{border:none;background:#BDC2CA;}.bookmark-app .navbar.navbar-fixed-top .navbar-inner .navbar-form .input-append .btn i{color:white;}
 .bookmark-app .navbar.navbar-fixed-top .navbar-inner .avatar-nav{padding:14px 16px 14px 16px;}
 .bookmark-app .navbar.navbar-fixed-top .navbar-inner .nav li a.btn{border:none;background:#e33244;margin:16px 0 0 15px;padding:4px 6px;color:white;}
-.bookmark-app .navbar.navbar-fixed-top .navbar-inner .nav .dropdown-menu{min-width:260px;}
+.bookmark-app .navbar.navbar-fixed-top .navbar-inner .nav .menu-box.dropdown-menu{min-width:260px;}
 .bookmark-app .navbar.navbar-fixed-top.navbar .nav>li>a{border:none;}
 .bookmark-app .navbar.navbar-fixed-top .brand{width:220px;text-align:center;background:#51D2B7;color:white;text-shadow:none;padding:20px 0;margin:0;font-size:24px;font-weight:bold;}
 .bookmark-app .menu-box .iconbox{text-align:center;padding:10px;}.bookmark-app .menu-box .iconbox i{font-size:32px;padding-bottom:5px;}
