--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -147,7 +147,7 @@ a {
                     color: white;
 
                 }
-                .dropdown-menu {
+                .menu-box.dropdown-menu {
                     min-width:260px;
                 }
             }
