--- a/misc/templates/misc/email_templates/default.html
+++ b/misc/templates/misc/email_templates/default.html
@@ -41,7 +41,7 @@
                               <tbody><tr>
                                       <td style="color:#333; font-size:12px;"><b>© <a href="http://lianpeng.me" target="_blank">莲蓬</a></b>
                                         {% if unsubscribe_link %}
-                                        <a href="{{ unsubscribe_link }}">取消订阅</a>
+                                        <a href="{{ unsubscribe_link }}" style="color:#333; font-size:12px;">取消订阅</a>
                                         {% endif %}
                                     </td>
                                     <td style="color:#333; font-size:12px; text-align:right;" width="130px">
